--- a/app/src/main/res/layout/activity_service_detail.xml
+++ b/app/src/main/res/layout/activity_service_detail.xml
@@ -15,23 +15,61 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         tools:context=".screens.service_detail.ServiceDetailActivity">
 
-        <TextView
-            android:id="@+id/service_name"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp"
-            android:text="@{viewModel.service.name}"
-            android:textSize="26sp"
-            android:textStyle="bold"
-            android:textAlignment="center"
+            android:layout_height="0dp"
+            android:background="@color/colorPrimary"
+            android:id="@+id/name_layout"
+            app:layout_constraintBottom_toTopOf="@+id/guideline"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="Hospital posadas" />
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:id="@+id/service_name"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:text="@{viewModel.service.name}"
+                android:textAlignment="center"
+                android:textSize="28sp"
+                android:textStyle="bold"
+                android:textColor="@color/white"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                tools:text="Hospital posadas" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.25" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.5" />
+
+        <View
+            android:layout_width="1dp"
+            android:layout_height="0dp"
+            android:background="#999999"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@id/guideline"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
         <TextView
             android:id="@+id/zone_label"
@@ -40,10 +78,11 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
-            android:text="Zona:"
-            android:textSize="18sp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/service_name" />
+            android:textColor="@color/colorPrimary"
+            android:text="Zona"
+            android:textSize="20sp"
+            app:layout_constraintLeft_toRightOf="@id/vertical"
+            app:layout_constraintTop_toBottomOf="@id/name_layout" />
 
         <TextView
             android:id="@+id/service_zone"
@@ -55,9 +94,8 @@
             android:text="@{viewModel.service.zone}"
             android:textSize="18sp"
             android:textStyle="bold"
-            app:layout_constraintLeft_toRightOf="@id/zone_label"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/service_name"
+            app:layout_constraintLeft_toRightOf="@id/vertical"
+            app:layout_constraintTop_toBottomOf="@id/zone_label"
             tools:text="Palermo" />
 
         <TextView
@@ -67,10 +105,11 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
-            android:text="Dirección:"
-            android:textSize="18sp"
+            android:text="Dirección"
+            android:textColor="@color/colorPrimary"
+            android:textSize="20sp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/service_zone" />
+            app:layout_constraintTop_toBottomOf="@id/guideline" />
 
         <TextView
             android:id="@+id/service_address"
@@ -82,9 +121,9 @@
             android:text="@{viewModel.service.address}"
             android:textSize="18sp"
             android:textStyle="bold"
-            app:layout_constraintLeft_toRightOf="@id/address_label"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/service_zone"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@id/vertical"
+            app:layout_constraintTop_toBottomOf="@id/address_label"
             tools:text="Av. Paseo Colon 290" />
 
         <TextView
@@ -94,10 +133,11 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
-            android:text="Estás a"
-            android:textSize="18sp"
+            android:text="Distancia"
+            android:textColor="@color/colorPrimary"
+            android:textSize="20sp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/service_address" />
+            app:layout_constraintTop_toBottomOf="@id/service_phone" />
 
         <TextView
             android:id="@+id/service_distance"
@@ -107,11 +147,11 @@
             android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
             android:text="10km"
-            android:textStyle="bold"
             android:textSize="18sp"
-            app:layout_constraintLeft_toRightOf="@id/distance_label"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/service_address" />
+            android:textStyle="bold"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="@id/vertical"
+            app:layout_constraintTop_toBottomOf="@id/distance_label" />
 
         <TextView
             android:id="@+id/phone_label"
@@ -120,10 +160,11 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
-            android:text="Teléfono:"
-            android:textSize="18sp"
+            android:text="Teléfono"
+            android:textColor="@color/colorPrimary"
+            android:textSize="20sp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/service_distance" />
+            app:layout_constraintTop_toBottomOf="@id/service_address" />
 
         <TextView
             android:id="@+id/service_phone"
@@ -135,9 +176,9 @@
             android:text="@{viewModel.service.telephone}"
             android:textSize="18sp"
             android:textStyle="bold"
-            app:layout_constraintLeft_toRightOf="@id/phone_label"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/service_distance"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@id/vertical"
+            app:layout_constraintTop_toBottomOf="@id/phone_label"
             tools:text="1122223333" />
 
         <TextView
@@ -147,10 +188,11 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
-            android:text="Mail:"
-            android:textSize="18sp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/service_phone" />
+            android:text="Mail"
+            android:textColor="@color/colorPrimary"
+            android:textSize="20sp"
+            app:layout_constraintLeft_toLeftOf="@id/vertical"
+            app:layout_constraintTop_toBottomOf="@id/service_zone" />
 
         <TextView
             android:id="@+id/service_mail"
@@ -162,9 +204,9 @@
             android:text="@{viewModel.service.mail}"
             android:textSize="18sp"
             android:textStyle="bold"
-            app:layout_constraintLeft_toRightOf="@id/mail_label"
+            app:layout_constraintLeft_toLeftOf="@id/vertical"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/service_phone"
+            app:layout_constraintTop_toBottomOf="@id/mail_label"
             tools:text="mail@test.com" />
 
         <TextView
@@ -174,9 +216,10 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
-            android:text="Plan mínimo necesario:"
-            android:textSize="18sp"
-            app:layout_constraintLeft_toLeftOf="parent"
+            android:text="Plan necesario"
+            android:textColor="@color/colorPrimary"
+            android:textSize="20sp"
+            app:layout_constraintLeft_toLeftOf="@id/vertical"
             app:layout_constraintTop_toBottomOf="@id/service_mail" />
 
         <TextView
@@ -189,9 +232,9 @@
             android:text="@{viewModel.service.minimumPlan}"
             android:textSize="18sp"
             android:textStyle="bold"
-            app:layout_constraintLeft_toRightOf="@id/plan_label"
+            app:layout_constraintLeft_toLeftOf="@id/vertical"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/service_mail"
+            app:layout_constraintTop_toBottomOf="@id/plan_label"
             tools:text="1" />
 
         <TextView
@@ -201,10 +244,11 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
-            android:text="Idiomas:"
-            android:textSize="18sp"
+            android:text="Idiomas"
+            android:textColor="@color/colorPrimary"
+            android:textSize="20sp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/service_plan" />
+            app:layout_constraintTop_toBottomOf="@id/service_distance" />
 
         <TextView
             android:id="@+id/service_languages"
@@ -213,12 +257,12 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
-            android:text="Español"
+            android:text="@{viewModel.service.languages.toString()}"
             android:textSize="18sp"
             android:textStyle="bold"
-            app:layout_constraintLeft_toRightOf="@id/languages_label"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/service_plan" />
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="@id/vertical"
+            app:layout_constraintTop_toBottomOf="@id/languages_label" />
 
         <TextView
             android:id="@+id/specializations_label"
@@ -227,10 +271,11 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
-            android:text="Especialidades:"
-            android:textSize="18sp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/languages_label" />
+            android:text="Especialidades"
+            android:textColor="@color/colorPrimary"
+            android:textSize="20sp"
+            app:layout_constraintLeft_toLeftOf="@id/vertical"
+            app:layout_constraintTop_toBottomOf="@id/service_plan" />
 
         <TextView
             android:id="@+id/service_specializations"
@@ -239,21 +284,21 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
-            android:text="Cardiologia, Pediatria, Traumatologia"
+            android:text="@{viewModel.service.specializations.toString()}"
             android:textSize="18sp"
             android:textStyle="bold"
-            app:layout_constraintLeft_toRightOf="@id/specializations_label"
+            app:layout_constraintLeft_toLeftOf="@id/vertical"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/languages_label" />
+            app:layout_constraintTop_toBottomOf="@id/specializations_label" />
 
         <ProgressBar
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
