--- a/app/src/main/res/layout/activity_new_authorization.xml
+++ b/app/src/main/res/layout/activity_new_authorization.xml
@@ -73,7 +73,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
-            android:layout_marginTop="35dp"
+            android:layout_marginTop="40dp"
             android:layout_marginRight="15dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="parent"
@@ -90,7 +90,20 @@
             app:layout_constraintRight_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/family_spinner" />
 
+        <TextView
+            android:id="@+id/family_error"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:textColor="#F80D0D"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/family_spinner" />
+
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/image_container"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginLeft="15dp"
@@ -182,23 +195,18 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <!---
-        <Button
-            android:id="@+id/photo_btn"
+        <TextView
+            android:id="@+id/image_error"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:layout_marginLeft="15dp"
-            android:layout_marginTop="50dp"
             android:layout_marginRight="15dp"
-            android:layout_marginBottom="15dp"
-            android:background="@color/colorPrimary"
-            android:text="SUBIR IMAGEN"
-            android:textColor="@color/white"
-            android:visibility="@{viewModel.isLoading ? View.GONE : View.VISIBLE}"
-            app:layout_constraintTop_toBottomOf="@+id/family_spinner"
+            android:textColor="#F80D0D"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
--->
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/image_container" />
+
         <Button
             android:id="@+id/confirm_btn"
             android:layout_width="0dp"
