--- a/app/src/main/res/layout/authorization_item.xml
+++ b/app/src/main/res/layout/authorization_item.xml
@@ -124,6 +124,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="10dp"
                 android:text="@{authorization.status}"
+                app:bindColor="@{authorization.status}"
                 android:textSize="16sp"
                 app:layout_constraintLeft_toRightOf="@id/state_label"
                 app:layout_constraintRight_toRightOf="parent"
