--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,7 @@
     <color name="colorPrimaryDark">#0F5FA0</color>
     <color name="colorAccent">#F26600</color>
     <color name="white">#FFFFFF</color>
+    <color name="red">#F44336</color>
+    <color name="orange">#FF9800</color>
+    <color name="green">#4CAF50</color>
 </resources>
